# elixir

./: .gitignore  Cargo.toml  Procfile  README.md  Rocket.toml  deploy.sh
migrations/: comments.sql  threads.sql
migrations/2021-08-02-225949_create_posts/: down.sql  up.sql
migrations/2021-08-10-205501_create_threads/: up.sql
public/: poole.css  styles.css  theme.css
src/: error.rs  lib.rs  main.rs  migrations.rs  models.rs  schema.rs  sql.rs  template.rs  utils.rs
src/routes/: comment.rs  index.rs  mod.rs  root.rs  search.rs  thread.rs
templates/: basic_nav.stpl  comment_component.stpl  error.stpl  head.stpl  index.stpl  login.stpl  nav.stpl  register.stpl  search.stpl  search_comments.stpl  thread_component.stpl  thread_create.stpl  thread_view.stpl  threads.stpl
