[package]
name = "elixir"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "README.md"]

[dependencies]
glob = "0.3"
tokio = "1.10"
chrono = "0.4"
ammonia = "3.1"
thiserror = "1.0"
rocket = "0.5.0-rc.1"
rusqlite = { version = "0.25", features = ["bundled"] }
pulldown-cmark = { version = "0.8", features = ["simd"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["sqlite_pool"] }
sailfish = { git = "https://github.com/rust-sailfish/sailfish", rev = "afcca6d" }
rocket_auth = { git = "https://github.com/knarkzel/rocket_auth" }

